Changes done in configuration Files

--- a/CCAVENUEIntegration2/Views/Home/PaymentCanceled.cshtml
+++ b/CCAVENUEIntegration2/Views/Home/PaymentCanceled.cshtml
@@ -8,11 +8,10 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Payment</title>
+    <title>Payment Canceled</title>
 </head>
 <body>
-    @using (Html.BeginForm("Payment1" ,"Home", FormMethod.Post))
-    {<button type="submit">Pay</button>}
+
+    Payment Canceled
 </body>
 </html>
-    
