--- a/CCAVENUEIntegration2/Views/Home/ccAvenue.cshtml
+++ b/CCAVENUEIntegration2/Views/Home/ccAvenue.cshtml
@@ -5,7 +5,7 @@
            name="encRequest" value="@Model.EncryptionRequest" />
     <input type="hidden" id="access_code"
            name="access_code" value="@Model.AccessCode" />
-    <input  type="submit" value="++++" />
+    <input  type="submit" value="Submit" />
 </form>
 <div class="row" style="text-align:center">
     <div class="small-12 large-12">
@@ -18,13 +18,7 @@
 <script>
 
     $(document).ready(function () {
-        console.log("ready!");
-        $(window).on("load", $("#paymentForm").submit());
+      $(window).on("load", $("#paymentForm").submit());
     });
-    //var x = 0;
-    //if (x == 0) {
-    //   // $("#paymentForm").submit();
-    //}
-
-    //x = 1;
+    
 </script>
