--- a/CCAVENUEIntegration2/Views/Home/CheckOut.cshtml
+++ b/CCAVENUEIntegration2/Views/Home/CheckOut.cshtml
@@ -12,7 +12,7 @@
 </head>
 <body>
     @using (Html.BeginForm("ShowPaymentPage", "Home", FormMethod.Post))
-    {<button type="submit">Pay</button>}
+    {<button type="submit">Check Out</button>}
 </body>
 </html>
     
