--- a/CCAVENUEIntegration2/Views/Home/ccAvenue.cshtml
+++ b/CCAVENUEIntegration2/Views/Home/ccAvenue.cshtml
@@ -5,7 +5,7 @@
            name="encRequest" value="@Model.EncryptionRequest" />
     <input type="hidden" id="access_code"
            name="access_code" value="@Model.AccessCode" />
-    <input  type="submit" value="Submit" />
+    @*<input  type="submit" value="Submit" />*@
 </form>
 <div class="row" style="text-align:center">
     <div class="small-12 large-12">
